# audio-research-tool

./: README.md  index.html
.github/workflows/: deploy-pages-auto-enable.yml
desktop-juce-timbre-adapter/: CMakeLists.txt  README.md
desktop-juce-timbre-adapter-v2/: CMakeLists.txt  CMakePresets.json  README.md
desktop-juce-timbre-adapter-v2/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
desktop-juce-timbre-adapter/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
releases/fusion-audio-lab/: CHANGELOG.md  CHANGELOG_v041_append.md  RELEASE_POLICY.md
releases/fusion-audio-lab/v0.4.0/: fusion_audio_lab_v040.html  index.html
releases/fusion-audio-lab/v0.4.1/: fusion_audio_lab_v041.html  index.html
